--- a/package.json
+++ b/package.json
@@ -2,16 +2,30 @@
   "name": "api-laporan-asn",
   "version": "1.0.0",
   "description": "backend api for laporan-asn app",
-  "main": "./build/server.js",
+  "main": "./build/app.js",
   "author": "Ryan Adi Putra",
   "license": "MIT",
+  "scripts": {
+    "start": "node ./build/app.js",
+    "dev": "nodemon ./src/app.ts",
+    "build": "tsc --project ./"
+  },
   "dependencies": {
-    "express": "^4.17.2"
+    "cors": "^2.8.5",
+    "debug": "^4.3.3",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.2",
+    "express-winston": "^4.2.0",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
+    "@types/debug": "^4.1.7",
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.5",
-    "node-ts": "^5.1.2",
+    "nodemon": "^2.0.15",
+    "source-map-support": "^0.5.21",
+    "ts-node": "^10.4.0",
     "typescript": "^4.5.4"
   }
 }
