--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,11 @@
 {
     "compilerOptions": {
-        "target": "ES3",
+        "target": "es2016",
         "module": "commonjs",
         "rootDir": "./src",
         "outDir": "./build",
         "esModuleInterop": true,
         "strict": true,
+        "inlineSourceMap": true
     }
 }
