--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "build": "tsc --project ./"
   },
   "dependencies": {
+    "@types/uuid": "^8.3.3",
+    "argon2": "^0.28.3",
     "cors": "^2.8.5",
     "debug": "^4.3.3",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "express-winston": "^4.2.0",
+    "uuid": "^8.3.2",
     "winston": "^3.3.3"
   },
   "devDependencies": {
