--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "express-winston": "^4.2.0",
+    "mongoose": "^6.1.4",
     "uuid": "^8.3.2",
     "winston": "^3.3.3"
   },
