--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "build": "tsc --project ./"
   },
   "dependencies": {
-    "@types/uuid": "^8.3.3",
     "argon2": "^0.28.3",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "debug": "^4.3.3",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "express-winston": "^4.2.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.4",
     "uuid": "^8.3.2",
     "winston": "^3.3.3"
@@ -26,7 +27,9 @@
     "@types/cors": "^2.8.12",
     "@types/debug": "^4.1.7",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.6",
     "@types/node": "^17.0.5",
+    "@types/uuid": "^8.3.3",
     "nodemon": "^2.0.15",
     "source-map-support": "^0.5.21",
     "ts-node": "^10.4.0",
