--- a/package.json
+++ b/package.json
@@ -11,9 +11,8 @@
     "build": "tsc --project ./"
   },
   "dependencies": {
-    "argon2": "^0.28.3",
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
-    "crypto": "^1.0.1",
     "debug": "^4.3.3",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
@@ -24,6 +23,7 @@
     "winston": "^3.3.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
     "@types/debug": "^4.1.7",
     "@types/express": "^4.17.13",
