--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,13 @@
 version: '3'
 services:
-  app:
-    container_name: api-laporanasn
-    restart: always
-    build: .
-    ports:
-      - "8080:8080"
-    links:
-      - mongo
+  # app:
+  #   container_name: api-laporanasn
+  #   restart: always
+  #   build: .
+  #   ports:
+  #     - "8080:8080"
+  #   links:
+  #     - mongo
 
   mongo: 
     image: mongo
