--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
+STAGE=dev  
 PORT=8080
 DEBUG=true
-JWT_SECRET=jwt_secret_key
+JWT_SECRET=secretkey
+LOCAL_DB=true
+DB_NAME=dbname
+DB_USERNAME=dbusername
+DB_PASSWORD=dbpassword
