--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,4 @@
-STAGE=dev  
 PORT=8080
 DEBUG=true
-JWT_SECRET=secretkey
-LOCAL_DB=true
-DB_NAME=dbname
-DB_USERNAME=dbusername
-DB_PASSWORD=dbpassword
+JWT_SECRET=<jwt_secret_key>
+DB_CONNECTION=<monogdb_connection_uri>
